# recruiter-candidate

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  rank.py  requirements.txt  submission_metadata.yaml  team_sarva_automata.csv
app/: __init__.py  artifact_names.py  artifacts_check.py  artifacts_manifest.py  behavioral.py  bm25_index.py  candidates.py  career_recall.py  config.py  constants.py  embeddings.py  feature_store.py  features.py  fusion.py  gemini_client.py  jd_requirements.py  logging_setup.py  ltr.py  main.py  modifier_params.py  pipeline.py  progress.py  rank_data.py  rank_submission.py  ranking_core.py  ranking_modifiers.py  reasoning.py  recall.py  reranker.py  submission_csv.py  traps.py
artifacts/: ARTIFACTS.md  candidate_lists.json  career_recall_scores.json  eda_report.json  fusion_params.json  fusion_tuning_report.json  modifier_params.json  sample_ranked.csv  submission_audit.json  tuning_report_modifiers.json
challenge/: DATA.md  Idea Submission Template _ Redrob.txt  challenge.txt
colab/: README.md  preprocess_gpu.ipynb  requirements.txt  run_preprocess_gpu.py
docs/: IMPLEMENTATION.md  METHODOLOGY.md  SUBMISSION.md  TECHNICAL_PLAN.html  TECHNICAL_PLAN.md
hf-space/: .dockerignore  .gitattributes  README.md
prompts/: README.md  label_archetype.txt  parse_jd.txt
scripts/: __init__.py  analyze_submission.py  audit_reasoning.py  audit_submission.py  bake_sample_ranking.py  build_career_recall_scores.py  build_methodology_deck.py  build_silver_labels.py  compare_submissions.py  eda.py  label_archetypes.py  lock_artifacts.py  package_hf_space.py  parse_jd.py  preprocess.py  refresh_live_metrics.py  setup_artifacts.py  train_ltr.py  tune.py  tune_fusion.py  tune_modifiers.py  validate_artifacts.py  verify_submission.py
tests/: __init__.py  test_career_recall.py  test_fusion.py  test_fusion_parity.py  test_modifier_params.py  (+8 more)
(+6 files in other folders)
