[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redrob-ranker"
version = "0.1.0"
description = "Intelligent candidate discovery and ranking for Redrob IndiaRuns hackathon"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-dotenv==1.0.1",
    "numpy==1.26.4",
    "polars==1.17.1",
    "pyarrow==18.1.0",
    "lightgbm==4.5.0",
    "sentence-transformers==3.3.1",
    "faiss-cpu==1.9.0.post1",
    "rank-bm25==0.2.2",
    "rapidfuzz==3.10.1",
    "scikit-learn==1.5.2",
    "google-genai>=1.0.0",
    "google-auth>=2.0.0",
    "optuna==4.1.0",
    "onnxruntime==1.20.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
